Fixed vertical spacing of heart but it still looks stupid.

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1 {
 
 .circle {
 	float: left;
-	position:relative;
+	position: relative;
 	text-indent: -9999px;
 	border-radius: 50%;
 	width: 100px;
@@ -68,11 +68,30 @@ h1 {
 	vertical-align: middle;
 	}
 
+.heart {
+	float: left;
+	position: relative;
+	text-indent: -9999px;
+	width: 114px;
+	height: 110px;
+	background-repeat: no-repeat;
+	background-position: 0px 5px;
+	text-align: center;
+	background-image: url(/images/heart.png); 
+	}
+
 .circletext {
 	position: absolute;
 	top: 50%;
 	height: 36px;
 	margin-top: -18px;
+	}
+
+.hearttext {
+	position: absolute;
+	top: 50%;
+	height: 12px;
+	margin-top: -20px;
 	}
 
 .circle:hover {
@@ -81,29 +100,8 @@ h1 {
 	text-decoration: none;
 	}
 	
-.heart {
-	float: left;
-	position:relative;
-	text-indent: -9999px;
-	width: 114px;
-	height: 100px;
-	vertical-align: bottom;
-	background-repeat: no-repeat;
-	background-position: 0px 0px;
-	text-align: center;
-	background-image: url(/images/heart.png); 
-	vertical-align: middle;
-	}
-
-.hearttext {
-	position: absolute;
-	top: 50%;
-	height: 12px;
-	margin-top: -6px;
-	}
-
 .heart:hover {
-    background-position: -114px 0px;
+    background-position: -114px 5px;
 	text-indent: 0px;
 	text-decoration: none;
 	}
